# xiv-inner-finder

./: README.md
back/: .gitignore  Cargo.toml  README.md  secrets.json
back/src/: main.rs
back/src/api/: auth.rs  mod.rs  user.rs  xiv.rs
back/src/store/: secrets.rs
front/: package.json
infrastructures/: compose.yaml  deployment.back.k8s.yaml  deployment.back.yaml  deployment.front.k8s.yaml  deployment.postgres.yaml  deployment.yaml
infrastructures/db/: .gitignore  pp.example
